# bigsh0t

./: .gitignore  CMakeLists.txt  README.md  astyle.cmd  format_qml.py  install-linux.sh  install-osx.sh  install.cmd  make-linux.sh  make-osx.sh  make.cmd  stabilize360.cmd  unittest.cmd
src/frei0r/include/: frei0r.hpp
src/main/cpp/: Debug.cpp  Debug.hpp  EMoR.cpp  EMoR.hpp  EMoRData.inc  EqCap.cpp  EqMask.cpp  EqToRect.cpp  EqToStereo.cpp  EqWrap.cpp  Frei0rFilter.hpp  Frei0rParameter.hpp  Graphics.cpp  Graphics.hpp  HemiToEq.cpp  ImageProcessing.cpp  ImageProcessing.hpp  LUT.hpp  MP4.cpp  MP4.hpp  MPFilter.cpp  MPFilter.hpp  MPSource.cpp  MPSource.hpp  Math.cpp  Math.hpp  Matrix.cpp  Matrix.hpp  RectToEq.cpp  Stabilize360.cpp  Stabilize360v2.cpp  SummedAreaTable.cpp  SummedAreaTable.hpp  Transform360.cpp  Version.hpp  ZenithCorrection.cpp  omp_compat.h  sse_compat.hpp
src/main/python/: stabilize360.py
src/main/shotcut/: shotcut_ui.qml
src/main/shotcut/bigsh0t_eq_cap/: meta.qml  ui.qml
src/main/shotcut/bigsh0t_eq_mask/: meta.qml  ui.qml
src/main/shotcut/bigsh0t_eq_to_rect/: meta.qml  ui.qml
src/main/shotcut/bigsh0t_eq_to_stereo/: meta.qml  ui.qml
src/main/shotcut/bigsh0t_eq_wrap/: meta.qml  ui.qml
src/main/shotcut/bigsh0t_hemi_to_eq/: meta.qml  ui.qml
src/main/shotcut/bigsh0t_rect_to_eq/: meta.qml  ui.qml
src/main/shotcut/bigsh0t_stabilize_360/: meta.qml  ui.qml
src/main/shotcut/bigsh0t_stabilize_360_v2/: meta.qml  ui.qml
src/main/shotcut/bigsh0t_transform_360/: meta.qml  ui.qml  vui.qml
src/main/shotcut/bigsh0t_zenith_correction/: meta.qml  ui.qml
src/main/shotcut/eq_mask/: meta.qml  ui.qml
src/main/shotcut/eq_to_rect/: meta.qml  ui.qml
src/main/shotcut/hemi_to_eq/: meta.qml  ui.qml
src/main/shotcut/rect_to_eq/: meta.qml  ui.qml
src/main/shotcut/transform_360/: meta.qml  ui.qml
src/test/cpp/: main.cpp
